# pyesridump

./: .bumpversion.cfg  .dockerignore  .gitignore  .travis.yml  DEPLOY.md  Dockerfile  LICENSE  Pipfile  README.md  RELEASING.md  download_esri.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
esri2geojson/: cache.py  esri2geojson.py
esridump/: __init__.py  cli.py  dumper.py  errors.py  esri2geojson.py  state.py
tests/: cli_tests.py  download_tests.py  esrijson_tests.py  test_cli.py  test_download.py  test_esrijson.py
tests/fixtures/us-ca-carson/: us-ca-carson-0.json  us-ca-carson-count-only.json  us-ca-carson-metadata.json
tests/fixtures/us-ca-inyo/: us-ca-inyo-cache.geojson  us-ca-inyo-feat.json  us-ca-inyo-ids-only.json  us-ca-inyo-metadata.json  us-ca-inyo-query.json
tests/fixtures/us-ca-tuolumne/: us-ca-tuolumne-0.json  us-ca-tuolumne-count-only.json  us-ca-tuolumne-ids-only.json  us-ca-tuolumne-metadata.json  us-ca-tuolumne-statistics.json
tests/fixtures/us-esri-test/: us-esri-test-0.json  us-esri-test-count-only.json  us-esri-test-ids-only.json  us-esri-test-metadata.json
tests/fixtures/us-fl-polk/: us-fl-polk-0.json  us-fl-polk-count-only.json  us-fl-polk-ids-only.json  us-fl-polk-metadata.json  us-fl-polk-statistics.json
tests/fixtures/us-il-chicago/: count-only.json  metadata.json  statistics.json
tests/fixtures/us-il-cook/: ids-only.json  metadata.json  page-full.json  page-partial.json
tests/fixtures/us-mi-kent/: us-mi-kent-0.json  us-mi-kent-count-only.json  us-mi-kent-ids-only.json  (+2 more)
(+9 files in other folders)
