[tool.poetry]
name = "pyesridump"
version = "0.1.0"
description = ""
authors = ["wchatx <wchatx@gmail.com>"]
packages = [{"include" = "esridump"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
stamina = "^24.1.0"

[tool.poetry.scripts]
esri2geojson = "esridump.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
